# modules/user/response/loginresponse.go
@@ -1,0 +1,6 @@
+package response
+
+type LoginResponse struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
